@startuml

entity "users" as users {
  *id : int <<PK>>
  --
  name : varchar
  email : varchar
  password : varchar
  role : varchar
  created_at : datetime
}

entity "products" as products {
  *id : int <<PK>>
  --
  title : varchar
  description : text
  price : decimal
  offer : decimal
  category_id : int <<FK>>
  image : varchar
  status : varchar
  created_at : datetime
}

entity "categories" as categories {
  *id : int <<PK>>
  --
  name : varchar
}

entity "orders" as orders {
  *id : int <<PK>>
  --
  user_id : int <<FK>>
  total_price : decimal
  status : varchar
  created_at : datetime
}

entity "order_items" as order_items {
  *id : int <<PK>>
  --
  order_id : int <<FK>>
  product_id : int <<FK>>
  quantity : int
  price : decimal
}

users ||--o{ orders : "places"
orders ||--o{ order_items : "contains"
products ||--o{ order_items : "is in"
categories ||--o{ products : "has"

@enduml
